changed experience to work

--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Experience</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="work_styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
@@ -12,12 +12,12 @@
         <ul class="nav">
           <li class="name">Eric Bradberry</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Experience</a></li>
+          <li><a href="resume.html" target="blank">Resume</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/eb_pic.png" alt="Drawing of Jane Smith" class="profile-image">
+      <img src="images/eb_pic.png" alt="Eric Bradberry selfie" class="profile-image">
       <h1 class="tag name">Work History</h1>
       <p class="tag location">Feel free to contact me with any questions you may have.</p>
     </header>
