--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav">
           <li class="name">Eric Bradberry</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="experience.html">Work History</a></li>
+          <li><a href="work.html">Work</a></li>
         </ul>
     </div>
 
