removed second css file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav">
           <li class="name">Eric Bradberry</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="work.html">Work</a></li>
+          <li><a href="work.html" target="blank">Work</a></li>
         </ul>
     </div>
 
@@ -25,8 +25,8 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I am brand new to the world of web development. I've been working the last 15 years as a video editor and videographer. I've chosen to switch careers based on my lifelong love of all things computers. I attempted to code for the first time in the 1980's when my family bought a Commodore 64 gaming system.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I am brand new to the world of web development. I've been working for the last 15 years as a video editor and videographer. I've chosen to switch careers based on my life long love of all things computers. I attempted to code for the first time in the 1980's when my family bought a Commodore 64 gaming system and I've been fascinated ever since.</p>
+        <p>I'm very excited to start this new and challenging career change. I've been feeling like I've been living a lie when it comes to being passionate about my work. This career switch will be just the thing that I need to inject passion back into my career.</p>
       </div> 
 
       <div class="card">
