--- a/work.html
+++ b/work.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Experience</title>
+  <title>Work</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="work_styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
@@ -12,11 +12,10 @@
         <ul class="nav">
           <li class="name">Eric Bradberry</li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html" target="blank">Resume</a></li>
         </ul>
     </div>
 
-    <header>
+    <header class="work_header">
       <img src="images/eb_pic.png" alt="Eric Bradberry selfie" class="profile-image">
       <h1 class="tag name">Work History</h1>
       <p class="tag location">Feel free to contact me with any questions you may have.</p>
@@ -25,13 +24,13 @@
     <main class="flex">
       <div class="skills-card">
         <h2>Work History</h2>
-        <p>I am brand new to the world of web development. I've been working the last 15 years as a video editor and videographer. I've chosen to switch careers based on my lifelong love of all things computers. I attempted to code for the first time in the 1980's when my family bought a Commodore 64 gaming system.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>Here is my professional work history.</p>
+        <p>Feel free to <a href="mailto:ericbradberry@gmail.com">contact me</a> with any questions you have about my anything you see here.</p>
       </div> 
 
       <div class="card">
         <h2>Skills</h2>
-        <p>Here are some of the programs that I've used in my previous career of video editing:</p>
+        <p>Here are some of the programs that I've mastered in my previous career of video editing:</p>
         <ul class="skills">
           <li>After Effects</li>
           <li>Premiere</li>
