Added C64 image and updated html markup

--- a/work.html
+++ b/work.html
@@ -24,7 +24,18 @@
     <main class="flex">
       <div class="skills-card">
         <h2>Work History</h2>
-        <p>Here is my professional work history.</p>
+        <div>
+          <h3>Formation Advertising, <em>Supervising Editor</em></h3>
+          <p>December 2012-present</p>
+        </div>
+        <div>
+          <h3>Fitzpatrick Advertising, <em>Senior Editor</em></h3>
+          <p>July 2012-December 2012</p>
+        </div>
+        <div>
+          <h3>Action Integrated Marketing, <em>Video Editor</em></h3>
+          <p>July 2006-December July 2012</p>
+        </div>
         <p>Feel free to <a href="mailto:ericbradberry@gmail.com">contact me</a> with any questions you have about my anything you see here.</p>
       </div> 
 
