Added resume.html and modified styles.css

--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav>
         <ul class="nav">
           <li class="name">Eric Bradberry</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="work.html" target="blank">Work</a></li>
+          <li><a href="resume.html" target="blank">Resume</a></li>
         </ul>
-    </div>
+      </nav>
 
     <header>
-      <img src="images/eb_pic.png" alt="Drawing of Jane Smith" class="profile-image">
+      <img src="images/eb_pic.png" alt="Eric Bradberry Portfolio Image" class="profile-image">
       <h1 class="tag name">Hello, I’m Eric.</h1>
       <p class="tag location">I live in Atlanta, Georgia.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <article class="card">
         <h2>Background</h2>
         <p>I am brand new to the world of web development. I've been working for the last 15 years as a video editor and videographer. I've chosen to switch careers based on my life long love of all things coding. I attempted to code for the first time in the 1980's when my family bought a Commodore 64 gaming system and I've been fascinated ever since.</p>
         <p>I'm very excited to start this new and challenging career path. I've been feeling like I've been living a lie when it comes to being passionate about my work. This career switch will be just the thing that I need to inject passion back into my career.</p>
         <img class="card-image" src="images/c64_old_original_box_1024x1024.jpg" alt="Commodore 64 image">
-      </div> 
+      </article> 
 
       <div class="card">
         <h2>Goals</h2>
