--- a/work.html
+++ b/work.html
@@ -8,50 +8,31 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav>
         <ul class="nav">
           <li class="name">Eric Bradberry</li>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a>
+          </li>
+          <li><a href="resume.html" target="blank">Resume</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header class="work_header">
       <img src="images/eb_pic.png" alt="Eric Bradberry selfie" class="profile-image">
       <h1 class="tag name">Work History</h1>
-      <p class="tag location">Feel free to contact me with any questions you may have.</p>
+      <p class="tag location">Here is a brief history of my work experience.</p>
     </header>
 
     <main class="flex">
-      <div class="skills-card">
-        <h2>Work History</h2>
-        <div>
-          <h3>Formation Advertising, <em>Supervising Editor</em></h3>
-          <p>December 2012-present</p>
-        </div>
-        <div>
-          <h3>Fitzpatrick Advertising, <em>Senior Editor</em></h3>
-          <p>July 2012-December 2012</p>
-        </div>
-        <div>
-          <h3>Action Integrated Marketing, <em>Video Editor</em></h3>
-          <p>July 2006-December July 2012</p>
-        </div>
-        <p>Feel free to <a href="mailto:ericbradberry@gmail.com">contact me</a> with any questions you have about my anything you see here.</p>
-      </div> 
+      <article class="video-card">
+        <h2>Work Samples</h2>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Ap2ua0LGPgE" title="VIP Exchange" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/3Qi3q9B4yt4" title="Automotive Destination" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/4bXwsnWfchc" title="Five Star Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Feel free to <a href="mailto:ericbradberry@gmail.com" class="contact">contact me</a> with any questions you have about my anything you see here.</p>
+      </article> 
 
-      <div class="card">
-        <h2>Skills</h2>
-        <p>Here are some of the programs that I've mastered in my previous career of video editing:</p>
-        <ul class="skills">
-          <li>After Effects</li>
-          <li>Premiere</li>
-          <li>Photoshop</li>
-          <li>Illustrator</li>
-          <li>Media Encoder</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
-
+      
     </main>
     <footer>
       <ul>
